--- a/src/ProjectData.json
+++ b/src/ProjectData.json
@@ -61,8 +61,8 @@
     },
     {
         "projectId": "augustokyo",
-        "enTitle": "August in Tokyo",
-        "jaTitle": "August in Tokyo",
+        "enTitle": "AUGUST IN TOKYO",
+        "jaTitle": "AUGUST IN TOKYO",
         "year": "Sep 2022",
         "team": "Personal",
         "category": "Web, Blog",
